--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</header>
 						<p>presentazione interessantissima sulla mia incredibile esistenza</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="BalestriniCV_en.pdf" target="_blank" class="button primary icon fa-download">Curriculum</a></li>
 						</ul>
 					</section>
 
