--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Balestrini Andrea</strong>, biomedical engineering student.<br />
-					My projects, my skills and my story.</h1>
+					My projects, my skills and my life.</h1>
 				</div>
 			</header>
 
@@ -54,13 +54,15 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/index/fulls/03.jpg" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Amateur radio</h3>
+								<p>Spiegazione della sezione 3</p>
+								<a href="#">See more.</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/index/fulls/04.jpg" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Scout</h3>
+								<p>Spiegazione della sezione 4</p>
+								<a href="#">See more.</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/index/fulls/05.jpg" class="image fit thumb"><img src="images/index/thumbs/05.jpg" alt="" /></a>
