--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Balestrini Andrea</strong>, biomedical engineering student.<br />
-					My projects, my skills and my story.</h1>
+					My projects, my skills and my life.</h1>
 				</div>
 			</header>
 
@@ -35,7 +35,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						
+
 					</section>
 
 		<!-- Footer -->
