--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -35,7 +35,12 @@
 
 				<!-- Two -->
 					<section id="two">
-
+						<h5>ArduinoTube</h5>
+						<p><span class="image left"><img src="images/avatar.jpg" alt="" /></span>Spiegazione Rov comune di Saint-Marcel</p>
+					</section>
+					<section id="three">
+						<h5>Sea Explorer</h5>
+						<p><span class="image right"><img src="images/avatar.jpg" alt="" /></span>Spiegazione Rov maturità</p>
 					</section>
 
 		<!-- Footer -->
