--- a/photography.html
+++ b/photography.html
@@ -74,7 +74,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/12.jpg" class="image fit thumb"><img src="images/photography/thumbs/12.jpg" alt="" /></a>
-								<h3>Il Vallone di Saint-Barthélemy, in tutto il suo splendore autunnale </h3>
+								<h3>Il Vallone di Saint-Barth&eacute;lemy, in tutto il suo splendore autunnale </h3>
 								<p>29 October 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -124,7 +124,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/02.jpg" class="image fit thumb"><img src="images/photography/thumbs/02.jpg" alt="" /></a>
-								<h3>Portomarìn - palas De Rei</h3>
+								<h3>Portomar&iacute;n - Palas De Rei</h3>
 								<p>18 August 2017</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
