--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -35,12 +35,34 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h5>ArduinoTube</h5>
-						<p><span class="image left"><img src="images/avatar.jpg" alt="" /></span>Spiegazione Rov comune di Saint-Marcel</p>
+						<h4>Sea Explorer</h4>
+						<p>Spiegazione Rov maturità<br>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						<br><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis.</a>
+						</p>
+						<div class="box alt">
+							<div class="row gtr-50 gtr-uniform">
+								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/SeaExplorer/thumbs/01.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/SeaExplorer/thumbs/02.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/SeaExplorer/thumbs/03.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/SeaExplorer/thumbs/04.jpg" alt="" /></span></div>
+							</div>
+						</div>
 					</section>
 					<section id="three">
-						<h5>Sea Explorer</h5>
-						<p><span class="image right"><img src="images/avatar.jpg" alt="" /></span>Spiegazione Rov maturità</p>
+						<h4>ArduinoTube</h4>
+						<p>Spiegazione Rov comune di Saint-Marcel<br>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						<br><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube.</a>
+						</p>
+						<div class="box alt">
+							<div class="row gtr-50 gtr-uniform">
+								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/ArduinoTube/01.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/ArduinoTube/02.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/ArduinoTube/03.jpg" alt="" /></span></div>
+								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/ArduinoTube/04.jpg" alt="" /></span></div>
+							</div>
+						</div>
 					</section>
 
 		<!-- Footer -->
