--- a/photography.html
+++ b/photography.html
@@ -134,7 +134,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="https://www.instagram.com/andrea.balestrini/" target="_blank" class="button">For more photos see my Instagram account</a></li>
+							<li><a href="https://www.instagram.com/andrea.balestrini/" target="_blank" class="button">For more photos see my IG account</a></li>
 						</ul>
 					</section>
 
