--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<p>Spiegazione della sezione 4</p>
 								<a href="#">See more.</a>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!--article class="col-6 col-12-xsmall work-item">
 								<a href="images/index/fulls/05.jpg" class="image fit thumb"><img src="images/index/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -73,11 +73,8 @@
 								<a href="images/index/fulls/06.jpg" class="image fit thumb"><img src="images/index/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article-->
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
 					</section>
 
 				<!-- Three -->
