--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -38,7 +38,7 @@
 						<h4>Sea Explorer</h4>
 						<p>Spiegazione Rov maturità<br>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						<br><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis.</a>
+						<br><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis (it).</a>
 						</p>
 						<div class="box alt">
 							<div class="row gtr-50 gtr-uniform">
@@ -53,7 +53,7 @@
 						<h4>ArduinoTube</h4>
 						<p>Spiegazione Rov comune di Saint-Marcel<br>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						<br><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube.</a>
+						<br><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube (it).</a>
 						</p>
 						<div class="box alt">
 							<div class="row gtr-50 gtr-uniform">
