--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						<header class="major">
 							<h2>Allow me to introduce myself</h2>
 						</header>
+						<img src="https://www.giphy.com/gifs/3o7btQ0NH6Kl8CxCfK/html5" />
 						<p>presentazione interessantissima sulla mia incredibile esistenza</p>
 						<ul class="actions">
 							<li><a href="docs/BalestriniCV_en.pdf" target="_blank" class="button primary icon fa-download">Curriculum</a></li>
