--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 						</header>
 						<p>presentazione interessantissima sulla mia incredibile esistenza</p>
 						<ul class="actions">
-							<li><a href="docs/BalestriniCV_en.pdf" target="_blank" class="button primary icon fa-download">Curriculum</a></li>
+							<li><a href="docs/BalestriniCV_en.pdf" target="_blank" class="button primary icon fa-download">Curriculum (en)</a></li>
+							<li><a href="docs/BalestriniCV_it.pdf" target="_blank" class="button primary icon fa-download">Curriculum (it)</a></li>
 						</ul>
 					</section>
 
