--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -40,27 +40,28 @@
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 						<br><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis (it).</a>
 						</p>
-						<div class="box alt">
+						<div class="box alt work-item">
 							<div class="row gtr-50 gtr-uniform">
-								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/SeaExplorer/thumbs/01.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/SeaExplorer/thumbs/02.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/SeaExplorer/thumbs/03.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/SeaExplorer/thumbs/04.jpg" alt="" /></span></div>
+								<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/01.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/01.jpg" alt="" /></a></div>
+								<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/02.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/02.jpg" alt="" /></a></div>
+								<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/03.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/03.jpg" alt="" /></a></div>
+								<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/04.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/04.jpg" alt="" /></a></div>
 							</div>
 						</div>
 					</section>
-					<section id="three">
+
+					<section id="two">
 						<h4>ArduinoTube</h4>
 						<p>Spiegazione Rov comune di Saint-Marcel<br>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 						<br><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube (it).</a>
 						</p>
-						<div class="box alt">
+						<div class="box alt work-item">
 							<div class="row gtr-50 gtr-uniform">
-								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/ArduinoTube/01.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/ArduinoTube/02.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/ArduinoTube/03.jpg" alt="" /></span></div>
-								<div class="col-4"><span class="image fit"><img src="images/arduinoandelectronics/ArduinoTube/04.jpg" alt="" /></span></div>
+								<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/01.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/01.jpg" alt="" /></a></div>
+								<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/02.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/02.jpg" alt="" /></a></div>
+								<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/03.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/03.jpg" alt="" /></a></div>
+								<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/04.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/04.jpg" alt="" /></a></div>
 							</div>
 						</div>
 					</section>
