--- a/index.html
+++ b/index.html
@@ -41,29 +41,25 @@
 					<section id="two">
 						<h2>What I do?</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/index/fulls/01.jpg" class="image fit thumb"><img src="images/index/thumbs/01.jpg" alt="" /></a>
+							<article class="col-6 col-12-xsmall">
+								<a href="arduinoandelectronics.html" class="image fit thumb"><img src="images/index/thumbs/01.jpg" alt="" /></a>
 								<h3>Arduino and Electronics projects</h3>
 								<p>Spiegazione della sezione 1<br></p>
-								<a href="arduinoandelectronics.html">See more.</a>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/index/fulls/02.jpg" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
+							<article class="col-6 col-12-xsmall">
+								<a href="photography.html" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
 								<h3>Photography</h3>
 								<p>Spiegazione della sezione 2</p>
-								<a href="photography.html">See more.</a>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/index/fulls/03.jpg" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
+							<article class="col-6 col-12-xsmall">
+								<a href="#" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
 								<h3>Amateur radio</h3>
 								<p>Spiegazione della sezione 3</p>
-								<a href="#">See more.</a>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/index/fulls/04.jpg" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
+							<article class="col-6 col-12-xsmall">
+								<a href="#" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
 								<h3>Scout</h3>
 								<p>Spiegazione della sezione 4</p>
-								<a href="#">See more.</a>
 							</article>
 							<!--article class="col-6 col-12-xsmall work-item">
 								<a href="images/index/fulls/05.jpg" class="image fit thumb"><img src="images/index/thumbs/05.jpg" alt="" /></a>
