--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -33,9 +33,11 @@
 						<p>viva viva arduino</p>
 					</section>
 
-				<!-- Two -->
-					<section id="two">
-						<h4>Sea Explorer</h4>
+				<div id="gal">
+
+				<!-- Three -->
+					<section id="three">
+						<h3>Sea Explorer</h3>
 						<p>Spiegazione Rov maturità<br>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 						<br><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis (it).</a>
@@ -50,9 +52,9 @@
 						</div>
 					</section>
 
-					<!-- Two -->
+				<!-- Two -->
 					<section id="two">
-						<h4>ArduinoTube</h4>
+						<h3>ArduinoTube</h3>
 						<p>Spiegazione Rov comune di Saint-Marcel<br>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 						<br><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube (it).</a>
@@ -66,6 +68,8 @@
 							</div>
 						</div>
 					</section>
+
+				</div>
 
 		<!-- Footer -->
 			<footer id="footer">
