--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<article class="col-6 col-12-xsmall">
 								<a href="arduinoandelectronics.html" class="image fit thumb"><img src="images/index/thumbs/01.jpg" alt="" /></a>
 								<h3>Arduino and Electronics projects</h3>
-								<p>Spiegazione della sezione 1<br></p>
+								<p>Spiegazione della sezione 1</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="photography.html" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
@@ -74,8 +74,8 @@
 						</div>
 					</section>
 
-				<!-- Three -->
-					<section id="three">
+				<!-- GetInTouch -->
+					<section id="GetInTouch">
 						<h2>Get In Touch</h2>
 						<p>Cose forse interessanti che aggiungo</p>
 						<!--div class="row">
@@ -105,7 +105,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">mail@mail.mail</a>
+										<a href="#">andreabalestrini@alice.it</a>
 									</li>
 								</ul>
 							</div>
