--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 							<article class="col-6 col-12-xsmall">
 								<a href="arduinoandelectronics.html" class="image fit thumb"><img src="images/index/thumbs/01.jpg" alt="" /></a>
 								<h3>Arduino and Electronics projects</h3>
-								<p>Spiegazione della sezione 1</p>
+								<p>Since I was a child, I've always loved creating and inventing objects. Here the projects I have made.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="photography.html" class="image fit thumb"><img src="images/index/thumbs/02.jpg" alt="" /></a>
 								<h3>Photography</h3>
-								<p>Spiegazione della sezione 2</p>
+								<p>With photography I try to capture the situations and landscapes that present themselves before me.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="#" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
 								<h3>Amateur radio</h3>
-								<p>Spiegazione della sezione 3</p>
+								<p>In the last few years I have developed a certain interest in the amateur radio environment.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="#" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
 								<h3>Scout</h3>
-								<p>Spiegazione della sezione 4</p>
+								<p>Scouts have always been a constant presence in my life.</p>
 							</article>
 							<!--article class="col-6 col-12-xsmall work-item">
 								<a href="images/index/fulls/05.jpg" class="image fit thumb"><img src="images/index/thumbs/05.jpg" alt="" /></a>
