--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>Arduino and Electronics projects</h2>
 						</header>
-						<p>viva viva arduino</p>
+						<p>...writing...</p>
 					</section>
 
 				<!-- Three -->
