--- a/photography.html
+++ b/photography.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>Photography</h2>
 						</header>
-						<p>viva viva la fotografia</p>
+						<p>...writing...</p>
 					</section>
 
 				<!-- Two -->
