--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 								<p>With photography I try to capture the situations and landscapes that present themselves before me.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="#" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
+								<a href="images/UC.jpg" class="image fit thumb"><img src="images/index/thumbs/03.jpg" alt="" /></a>
 								<h3>Amateur radio</h3>
 								<p>In the last few years I have developed a certain interest in the amateur radio environment.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="#" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
+								<a href="images/UC.jpg" class="image fit thumb"><img src="images/index/thumbs/04.jpg" alt="" /></a>
 								<h3>Scout</h3>
 								<p>Scouts have always been a constant presence in my life.</p>
 							</article>
