--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>, biomedical engineering student.<br />
+					<h1><strong>Balestrini Andrea</strong>, biomedical engineering student.<br/>
 					My projects, my skills and my life.</h1>
 				</div>
 			</header>
@@ -36,7 +36,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h3>Sea Explorer</h3>
-						<p>Spiegazione Rov maturità<br>
+						<p>Spiegazione Rov maturità<br/>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 						<br><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis (it).</a>
 						</p>
@@ -53,7 +53,7 @@
 				<!-- Two -->
 					<section id="two">
 						<h3>ArduinoTube</h3>
-						<p>Spiegazione Rov comune di Saint-Marcel<br>
+						<p>Spiegazione Rov comune di Saint-Marcel<br/>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 						<br><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube (it).</a>
 						</p>
