--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Balestrini Andrea</strong>, biomedical engineering student.<br />
+					<h1><strong>Balestrini Andrea</strong>, biomedical engineering student.<br/>
 					My projects, my skills and my life.</h1>
 				</div>
 			</header>
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>Allow me to introduce myself</h2>
 						</header>
-						<p>presentazione interessantissima sulla mia incredibile esistenza</p>
+						<p>Hi! I'm Andrea Balestrini.<br/>...writing...</p>
 						<ul class="actions">
 							<li><a href="docs/BalestriniCV_en.pdf" target="_blank" class="button primary icon fa-download">Curriculum (en)</a></li>
 							<li><a href="docs/BalestriniCV_it.pdf" target="_blank" class="button primary icon fa-download">Curriculum (it)</a></li>
@@ -77,9 +77,9 @@
 				<!-- GetInTouch -->
 					<section id="GetInTouch">
 						<h2>Get In Touch</h2>
-						<p>Cose forse interessanti che aggiungo</p>
-						<!--div class="row">
-							<div class="col-8 col-12-small">
+						<p>Call me or send me an e-mail and I will contact you as soon as possible!</p>
+						<div class="row">
+							<!--div class="col-8 col-12-small">
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -90,18 +90,18 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</div
+							</div-->
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										Frazione Perriere, 78.<br />
-										Saint-Vincent, Aosta<br />
+										Frazione Perri&egrave;re, 78<br/>
+										Saint-Vincent, Aosta<br/>
 										Italy
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-										+39 342 9305465
+										+39 --- -------
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
@@ -109,7 +109,7 @@
 									</li>
 								</ul>
 							</div>
-						</div-->
+						</div>
 					</section>
 
 		<!-- Footer -->
