--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -35,34 +35,38 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h3>Sea Explorer</h3>
-						<p>Spiegazione Rov maturità<br/>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						<br><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis (it).</a>
-						</p>
-						<div class="box alt work-item">
-							<div class="row gtr-50 gtr-uniform">
-								<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/01.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/01.jpg" alt="" /></a></div>
-								<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/02.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/02.jpg" alt="" /></a></div>
-								<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/03.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/03.jpg" alt="" /></a></div>
-								<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/04.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/04.jpg" alt="" /></a></div>
+						<div id=gal2>
+							<h3>Sea Explorer</h3>
+							<p>Spiegazione Rov maturità<br/>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							<br><a href="docs/BalestriniAndrea_SeaExplorer.pdf" target="_blank">High school tesis (it).</a>
+							</p>
+							<div class="box alt work-item">
+								<div class="row gtr-50 gtr-uniform">
+									<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/01.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/01.jpg" alt="" /></a></div>
+									<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/02.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/02.jpg" alt="" /></a></div>
+									<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/03.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/03.jpg" alt="" /></a></div>
+									<div class="col-4"><a href="images/arduinoandelectronics/SeaExplorer/thumbs/04.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/SeaExplorer/fulls/04.jpg" alt="" /></a></div>
+								</div>
 							</div>
 						</div>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h3>ArduinoTube</h3>
-						<p>Spiegazione Rov comune di Saint-Marcel<br/>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						<br><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube (it).</a>
-						</p>
-						<div class="box alt work-item">
-							<div class="row gtr-50 gtr-uniform">
-								<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/01.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/01.jpg" alt="" /></a></div>
-								<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/02.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/02.jpg" alt="" /></a></div>
-								<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/03.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/03.jpg" alt="" /></a></div>
-								<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/04.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/04.jpg" alt="" /></a></div>
+						<div id=gal1>
+							<h3>ArduinoTube</h3>
+							<p>Spiegazione Rov comune di Saint-Marcel<br/>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							<br><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube (it).</a>
+							</p>
+							<div class="box alt work-item" id=gal1>
+								<div class="row gtr-50 gtr-uniform">
+									<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/01.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/01.jpg" alt="" /></a></div>
+									<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/02.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/02.jpg" alt="" /></a></div>
+									<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/03.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/03.jpg" alt="" /></a></div>
+									<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/04.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/04.jpg" alt="" /></a></div>
+								</div>
 							</div>
 						</div>
 					</section>
