--- a/photography.html
+++ b/photography.html
@@ -30,13 +30,22 @@
 						<header class="major">
 							<h2>Photography</h2>
 						</header>
-						<p>...writing...</p>
+						<p>In the last years I started to look at the world of photography.
+							I like to look through my photos to show the world as I see it,
+							focusing, in particular, on the nature that surrounds us.<br/>
+							In my shots I use the old polaroid format (1:1) and I don't use photo editing programs.<br/>
+							I'm not a photographer, I'm just a person who likes to photograph.</p>
 					</section>
 
 				<!-- Two -->
-					<section id="two">
+					<section id="Two">
 						<h2>Some photos I took</h2>
-						<div class="row">
+						<div class="row" id=gal1>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/photography/fulls/20.jpg" class="image fit thumb"><img src="images/photography/thumbs/20.jpg" alt="" /></a>
+								<h3>Stambecchi allo Zerbion, 3 di 3</h3>
+								<p>17 September 2018</p>
+							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/19.jpg" class="image fit thumb"><img src="images/photography/thumbs/19.jpg" alt="" /></a>
 								<h3>Stambecchi allo Zerbion, 2 di 3</h3>
