--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										Frazione Perri&egrave;re, 78<br/>
-										Saint-Vincent, Aosta<br/>
-										Italy
+										Aosta Valley, Italy<br/>
+										Turin, Italy
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
