--- a/photography.html
+++ b/photography.html
@@ -38,9 +38,9 @@
 					</section>
 
 				<!-- Two -->
-					<section id="Two">
+					<section class="gal" id="Two">
 						<h2>Some photos I took</h2>
-						<div class="row" id=gal1>
+						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/photography/fulls/20.jpg" class="image fit thumb"><img src="images/photography/thumbs/20.jpg" alt="" /></a>
 								<h3>Stambecchi allo Zerbion, 3 di 3</h3>
