--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -35,7 +35,7 @@
 
 				<!-- Three -->
 					<section id="three">
-						<div id=gal2>
+						<div class="gal">
 							<h3>Sea Explorer</h3>
 							<p>Spiegazione Rov maturità<br/>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -54,7 +54,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						<div id=gal1>
+						<div class="gal">
 							<h3>ArduinoTube</h3>
 							<p>Spiegazione Rov comune di Saint-Marcel<br/>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
