--- a/references.html
+++ b/references.html
@@ -39,7 +39,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two">
+					<section class="gal" id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
@@ -79,7 +79,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three">
+					<section class="gal" id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
