--- a/radio.html
+++ b/radio.html
@@ -30,18 +30,39 @@
 						<header class="major">
 							<h2>Amateur Radio</h2>
 						</header>
-						<p>...writing...</p>
+						<p>The amateur radio environment is a very interesting and stimulating environment. A radio-amateur (OM) is a person who
+							not only wants to talk on the radio, but also actively participates in experimentation in the telecommunications world.
+							Experimentation, desire for novelty and desire to get involved are the characteristics that lead an OM to enter the
+							world of radio.<br>
+							The amateur radio license also attests to a good knowledge of the functioning of a transceiver and the bases of the
+							world of radio communication.
+
+						</p>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
 						<div class="gal">
 							<h3>My radio experience</h3>
-							<p>Mondo radioamatoriale<br/>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							<br/><b>My radio equipment</b>
-							<br/><a href="docs/IC-2SE_italiano.pdf" target="_blank">ICOM IC-2SE (it).</a>
-							<br/><a href="docs/FT-7900E_italiano.pdf" target="_blank">YAESU FT-7900E (it).</a>
+							<p>It was 2016 when I decided to take the amateur radio license,
+								I was looking for a way to communicate away from the modern frenzy
+								and that would allow me to put my knowledge of electronics to good use.<br/>
+								After a few years I think it was a good idea,
+								even with a modest power of 50W, I managed to make connections throughout the northwest of Italy and I met other
+								OM with which to share my passion.
+							</p>
+						</div>
+						<div>
+							<h4>My radio equipment</h4>
+							<p>
+								<h5>ICOM IC2-SE</h5>
+								<a href="docs/IC-2SE_italiano.pdf" target="_blank">Manuale d'uso IC-2SE (it).</a>
+								<br/><a href="docs/IC-2SE_english.pdf" target="_blank">User manual IC-2SE (en).</a>
+							</p>
+							<p>
+								<h5>YAESU FT-7900E</h5>
+								<a href="docs/FT-7900E_italiano.pdf" target="_blank">Manuale d'uso FT-7900E (it).</a>
+								<br/><a href="docs/FT-7900E_english.pdf" target="_blank">User manual FT-7900E (en).</a>
 							</p>
 							<!--div class="box alt work-item">
 								<div class="row gtr-50 gtr-uniform">
