--- a/arduinoandelectronics.html
+++ b/arduinoandelectronics.html
@@ -60,7 +60,7 @@
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 							<br><a href="docs/ManualArdTube.pdf" target="_blank">User manual ArduinoTube (it).</a>
 							</p>
-							<div class="box alt work-item" id=gal1>
+							<div class="box alt work-item">
 								<div class="row gtr-50 gtr-uniform">
 									<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/01.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/01.jpg" alt="" /></a></div>
 									<div class="col-4"><a href="images/arduinoandelectronics/ArduinoTube/thumbs/02.jpg" class="image fit thumb"><img src="images/arduinoandelectronics/ArduinoTube/fulls/02.jpg" alt="" /></a></div>
